--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,15 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Distance to your destination:"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
         android:id="@+id/text"
         />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/butt1"/>
     <EditText
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -33,5 +34,11 @@
         android:layout_height="wrap_content"
         android:hint="enter destination"
         android:id="@+id/destinationLocation"
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/butt1"
+        android:text="send"
         />
 </LinearLayout>
