makes input fields wrap content. make error message more specific

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,13 @@
     android:orientation="vertical">
 
     <EditText
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="enter current location"
         android:id="@+id/currentLocation"
         />
     <EditText
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="enter destination"
         android:id="@+id/destinationLocation"
